# paradocx

./: .hgignore  .hgtags  .travis.yml  CHANGES  CHANGES.rst  LICENSE  NEWS.rst  README  README.rst  build deps.txt  jenkins  mypy.ini  pyproject.toml  pytest.ini  runtests.py  setup.cfg  setup.py
.github/workflows/: main.yml
bugs/: table-style-info-lost.py
docs/: conf.py  index.rst
jenkins/: config.xml  run
paradocx/: __init__.py  document.py  headerfooter.py  image.py  numbering.py  package.py  settings.py  styles.py  util.py
test/: common.py  conftest.py  test_docapi.py  test_image.py  test_sample.py
tests/: conftest.py  test_docapi.py  test_image.py
