[metadata]
name = paradocx
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = paradocx
long_description = file:README.rst
url = https://github.com/jaraco/paradocx
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
include_package_data = true
python_requires = >=3.8
install_requires =
	openpack>=1.1

[options.extras_require]
testing =
	# upstream
	pytest >= 6, != 8.1.1
	pytest-checkdocs >= 2.4
	pytest-cov
	pytest-mypy
	pytest-enabler >= 2.2
	pytest-ruff >= 0.2.1

	# local

docs =
	# upstream
	sphinx >= 3.5
	jaraco.packaging >= 9.3
	rst.linker >= 1.9
	furo
	sphinx-lint

	# local

[options.entry_points]
